# cheap8

./: .clang-tidy  CMakeLists.txt  README.md
cmake/: tools.cmake
src/: frame_buffer.cpp  frame_buffer.h  main.cpp  memory.h  renderer.h  sdl_renderer.cpp  sdl_renderer.h  sprite.cpp  sprite.h  types.h
